--- a/index.html
+++ b/index.html
@@ -48,3 +48,9 @@
     </section>
 </body>
 </html>
+
+<footer>
+    <p>номер:+7 9*** *** ** **</p>
+    <p>Email: *********@email.com</p>
+    Годлевски Александр
+    </footer>
