--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
          <a href="#two">Парк ААААА</a>
          <a href="#three">Галлерея хороших фильмов</a>
          <a href="#four">Космос</a>
+         <a href="footer">подвал</a>
     
 
         </nav>
@@ -46,11 +47,10 @@
         </article> 
         <img src="https://learn.algoritmika.org/uploads/student/70131982/68175a5213c14.png">
     </section>
-</body>
-</html>
-
-<footer>
+    <footer id="footer">
     <p>номер:+7 9*** *** ** **</p>
     <p>Email: *********@email.com</p>
     Годлевски Александр
     </footer>
+</body>
+</html>
