--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
         <h1 id="one"> 1 сайт </h1>
         <article class="site">
             <p>
-        этот проект был одним из первых что я написал ,а так же один из самых смешных ,здесь рассказывается смешная история штурмовика из вселенной PUBG mobile/Metro mobile мы изучали правильные цветовые сочетания  что можно понять по палитре цветов </p> <a href =""> кнопочка</a>
+        этот проект был одним из первых что я написал ,а так же один из самых смешных ,здесь рассказывается смешная история штурмовика из вселенной PUBG mobile/Metro mobile мы изучали правильные цветовые сочетания  что можно понять по палитре цветов </p> <a href =" https://lordy-sss.github.io/newyearpubg/"> кнопочка</a>
         </article>
         
         <img src ="https://learn.algoritmika.org/uploads/student/70131982/68208bf4db4d9.png">
          <h1 id="two"> 2 сайт </h1>
           <article class="site">
           <p>этот сайт был самым  первым что я написал тут мы только изучили как добавлять картинки  и менять шрифт сайт был про парк аттракционов ААААА
-да, прям так и назывался XD</p> <a href =""> кнопочка</a>
+да, прям так и назывался XD</p> <a href ="https://lordy-sss.github.io/AAAAA/"> кнопочка</a>
          </article>
          <img src ="https://learn.algoritmika.org/uploads/student/70131982/68208f979f7fe.png">
          <h1 id="three"> 3 сайт </h1>
          <article class="site">
         <p>это один из моих любимых сайтов который я написал
-здесь мы только изучили css но получилось очень красиво как я считаю а еще при нажатии на название можно зайти на Кинопоиск и посмотреть фильм который вы выбрали :D</p> <a href =""> кнопочка</a>
+здесь мы только изучили css но получилось очень красиво как я считаю а еще при нажатии на название можно зайти на Кинопоиск и посмотреть фильм который вы выбрали :D</p> <a href ="https://lordy-sss.github.io/filmsgallery/"> кнопочка</a>
          </article>
          <img src="https://learn.algoritmika.org/uploads/student/70131982/6820907df2f86.png">
          <h1 id="four"> 4 сайт </h1>
