--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <a href="#two">Парк ААААА</a>
          <a href="#three">Галлерея хороших фильмов</a>
          <a href="#four">Космос</a>
-         <a href="footer">подвал</a>
+         <a href="#footer">подвал</a>
     
 
         </nav>
