--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          <a href="#two">Парк ААААА</a>
          <a href="#three">Галлерея хороших фильмов</a>
          <a href="#four">Космос</a>
-         <a href="#footer">подвал</a>
+         <a href="#noDBaL">подвал</a>
     
 
         </nav>
@@ -47,7 +47,7 @@
         </article> 
         <img src="https://learn.algoritmika.org/uploads/student/70131982/68175a5213c14.png">
     </section>
-    <footer id="footer">
+    <footer id="noDBaL">
     <p>номер:+7 9*** *** ** **</p>
     <p>Email: *********@email.com</p>
     Годлевски Александр
